# parking_spaces

./: .gitignore  README.md  pyproject.toml
Codes/: seznam_api_testing.ipynb
configs/: default.yaml
parking/: acquire.py  chips.py  config.py  dataset.py  geo.py  infer.py  model.py  polygonize.py  qc.py  train.py
scripts/: run_local.ps1
