[project]
name = "parking"
version = "0.1.0"
description = "Semantic segmentation of parking spaces from CUZK Ortofoto CR aerial imagery"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "pyogrio",
    "torch>=2.2",
    "torchvision",
    "segmentation-models-pytorch>=0.4",
    "albumentations>=1.4",
    "torchmetrics>=1.3",
    "scipy",
    "pyyaml",
    "requests",
    "tqdm",
    "matplotlib",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parking"]

# Torch wheels per platform: this Linux laptop has no NVIDIA GPU (CPU wheels,
# saves ~4 GB); the Windows training box gets CUDA wheels. `uv sync` picks the
# right one automatically on each machine.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
